--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "debug": "~2.6.9",
     "ejs": "^3.1.7",
     "express": "~4.16.1",
+    "fs-extra": "^10.1.0",
     "http-errors": "~1.6.3",
     "morgan": "~1.9.1",
     "multer": "^1.4.4"
